# SharedWork

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
collaboration/: branching.md  code-review.md  communication.md  language-and-culture.md  meetings.md
processes/: decision-log.md  incidents.md  onboarding.md  releases.md  rfc-template.md  sbar-template.md
standards/: commits.md  documentation.md  python.md  security.md  testing.md
tools/: check_links.py
