[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brain"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
dev = ["pymarkdownlnt>=0.9"]

[tool.pymarkdown]
plugins.line-length.enabled = false
